SideBar and toggle barebones

--- a/components/Navigation/Navigation.module.css
+++ b/components/Navigation/Navigation.module.css
@@ -5,13 +5,9 @@
 .navigation__top-section{
 
 }
+.navigation__top-section img{
+    border-radius: 25%;
+}
 .navigation__bottom-section{
 
-}
-.navigation__link-list{
-    display:flex;
-    flex-direction: column;
-}
-.navigation__link-list a{
-    width: fit-content;
 }
