--- a/components/Navigation/SearchSideBar/SearchSideBar.module.css
+++ b/components/Navigation/SearchSideBar/SearchSideBar.module.css
@@ -22,10 +22,10 @@
   z-index: -999;
 }
 .sidebar .sidebar__link-list--active {
-  padding: 50px 0px;
+  padding: 30px 10px;
   display: flex;
   flex-direction: column;
-  width: 80%;
+  width: 100%;
   height: 100%;
   max-width: 450px;
   background: linear-gradient(rgba(66, 39, 90, 0.95), rgba(115, 75, 109, 0.95));
@@ -34,10 +34,17 @@
   /* left: 10%; */
   right: 0%;
 }
+.sidebar .sidebar__link-list--active >div{
+  /* margin: 50px 0px 0px; */
 
-.sidebar .sidebar__link-list--active svg {
+}
+
+.sidebar .sidebar__link-list--active > svg {
   position: absolute;
   right: 10px;
+  margin-top: 5px;
+  background: white;
+  border-radius: 50%;
 }
 .sidebar .sidebar__link-list--active a {
   width: fit-content;
